Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -125,7 +125,6 @@
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
         "z02YtuKLBZ4I",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -134,9 +133,10 @@
         "JzrdqUwXCVly",
         "9IktNkNQGUUH",
         "VOaWDLwIWXJf",
-        "HNMURhhYKntw"
+        "HNMURhhYKntw",
+        "Zfx8md_duDzl"
       ],
-      "authorship_tag": "ABX9TyPk7Wrh3vmRyacaoZjY/UNE",
+      "authorship_tag": "ABX9TyMXqTI1RLIPhr8CCyY6xHCE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7246,12 +7246,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6aZjr4sfBfQ5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 815
-        },
-        "outputId": "b9d63ba8-fde2-44c8-9504-840de7b18271"
+        "id": "6aZjr4sfBfQ5"
       },
       "source": [
         "# 팰린드롬 - 역순으로 읽어도 똑같을 때\n",
@@ -7275,51 +7270,7 @@
         "    print(dp[s-1][e-1])"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "12\n",
-            "1 2 1 3 1 2 1 1 1 1 1 1\n",
-            "[1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    624\u001b[0m         \"\"\"\n\u001b[0;32m--> 625\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    626\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-8a38977652d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7333,26 +7284,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EqURMFb1BfVK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "947684ce-77a9-43de-d827-cfa332bb0ae1"
+        "id": "EqURMFb1BfVK"
       },
       "source": [
-        "if 1:\n",
-        "    print('asd')"
+        "n = int(input())\n",
+        "l = list(map(int, input().split()))\n",
+        "\n",
+        "m = int(input())\n",
+        "s = list(map(int, input().split()))\n",
+        "\n",
+        "dp = [[False]*n for _ in range(n)]\n",
+        "for j in range(n):\n",
+        "    for i in range(j,-1,-1):\n",
+        "        if l[i] == l[j]:\n",
+        "            dp[i][j] = l[i]\n",
+        "        else:\n",
+        "            dp[i][j] = dp[i][i] + dp[i][j-1]\n",
+        "\n",
+        "for i in s:\n",
+        "    \n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "asd\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7496,6 +7449,7 @@
         "n = int(input())\n",
         "c = int(input())\n",
         "\n",
+        "visited = [False] * (n+1)\n",
         "node = [[] for _ in range(n+1)]\n",
         "\n",
         "for _ in range(c):\n",
@@ -7503,8 +7457,17 @@
         "    node[a].append(b)\n",
         "    node[b].append(a)\n",
         "\n",
+        "def dfs(x):\n",
+        "    if visited[x]:\n",
+        "        return\n",
         "\n",
-        "\n"
+        "    visited[x] = True\n",
+        "    for i in node[x]:\n",
+        "        dfs(i)\n",
+        "\n",
+        "dfs(1)\n",
+        "visited[1] = False\n",
+        "print(sum(visited))"
       ],
       "execution_count": null,
       "outputs": []
@@ -7515,7 +7478,7 @@
         "id": "_jfJBLzSDWEK"
       },
       "source": [
-        "####  1672번"
+        "#### "
       ]
     },
     {
@@ -7524,24 +7487,7 @@
         "id": "2423R-7gDWEK"
       },
       "source": [
-        "m = [['A','C','A','G'],\n",
-        "     ['C','G','T','A'],\n",
-        "     ['A','T','C','G'],\n",
-        "     ['G','A','G','T']]\n",
-        "\n",
-        "m_list = {'A':0,'G':1,'C':2,'T':3}\n",
-        "\n",
-        "n = int(input())\n",
-        "\n",
-        "t = input()\n",
-        "res = t[-1]\n",
-        "\n",
-        "for k in range(-2,-n-1,-1):\n",
-        "    i = m_list[t[k]]\n",
-        "    j = m_list[res]\n",
-        "    res = m[i][j]\n",
-        "\n",
-        "print(res)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -8841,13 +8787,21 @@
         "id": "CIsbivR4a9HU"
       },
       "source": [
-        "#### "
+        "#### 2010번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "n = int(input())                                    # 변수 입력\n",
+        "res = 1                                             # 결과 변수 생성\n",
+        "for _ in range(n):                                  # n번 반복\n",
+        "    res -= 1                                        # 콘센트 하나를 대신하여 늘어나므로 - 1\n",
+        "    res += int(sys.stdin.readline().rstrip('\\n'))   # 입력값 추가\n",
+        "\n",
+        "print(res)"
       ],
       "metadata": {
         "id": "_0LSUPuna9HU"
@@ -8861,6 +8815,43 @@
         "id": "InPGru7oa9K7"
       },
       "source": [
+        "####  1672번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = [['A','C','A','G'],\n",
+        "     ['C','G','T','A'],\n",
+        "     ['A','T','C','G'],\n",
+        "     ['G','A','G','T']]\n",
+        "\n",
+        "m_list = {'A':0,'G':1,'C':2,'T':3}\n",
+        "\n",
+        "n = int(input())\n",
+        "\n",
+        "t = input()\n",
+        "res = t[-1]\n",
+        "\n",
+        "for k in range(-2,-n-1,-1):\n",
+        "    i = m_list[t[k]]\n",
+        "    j = m_list[res]\n",
+        "    res = m[i][j]\n",
+        "\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "id": "yheIzxIta9K7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MkeGXGAL5ohl"
+      },
+      "source": [
         "#### "
       ]
     },
@@ -8870,7 +8861,27 @@
         ""
       ],
       "metadata": {
-        "id": "yheIzxIta9K7"
+        "id": "lQA5R2MD5ohm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LQpsIxCK5onk"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Qdw-Ikf65onl"
       },
       "execution_count": null,
       "outputs": []
