Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "HNMURhhYKntw",
         "Zfx8md_duDzl"
       ],
-      "authorship_tag": "ABX9TyMXqTI1RLIPhr8CCyY6xHCE",
+      "authorship_tag": "ABX9TyN1awTEQtBvAVA5zdbpHQEV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7278,7 +7278,7 @@
         "id": "UqLzpclrBfVJ"
       },
       "source": [
-        "#### "
+        "####  (***)2629번"
       ]
     },
     {
@@ -7287,22 +7287,39 @@
         "id": "EqURMFb1BfVK"
       },
       "source": [
-        "n = int(input())\n",
-        "l = list(map(int, input().split()))\n",
+        "# https://blog.naver.com/cwyoo01/222608971611\n",
+        "import sys\n",
+        "n = int(sys.stdin.readline().rstrip('\\n'))\n",
+        "l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
         "\n",
-        "m = int(input())\n",
-        "s = list(map(int, input().split()))\n",
+        "m = int(sys.stdin.readline().rstrip('\\n'))\n",
+        "s = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
         "\n",
-        "dp = [[False]*n for _ in range(n)]\n",
-        "for j in range(n):\n",
-        "    for i in range(j,-1,-1):\n",
-        "        if l[i] == l[j]:\n",
-        "            dp[i][j] = l[i]\n",
-        "        else:\n",
-        "            dp[i][j] = dp[i][i] + dp[i][j-1]\n",
+        "dp = [[False]*40001 for _ in range(n+1)]\n",
+        "ans = [False]*40001\n",
+        "\n",
+        "def find(left, right, i):\n",
+        "    global ans, dp\n",
+        "\n",
+        "    diff = abs(left - right)\n",
+        "    ans[diff] = True\n",
+        "\n",
+        "    if i == n:\n",
+        "        return\n",
+        "\n",
+        "    if not dp[i][diff]:\n",
+        "        find(left + l[i], right, i + 1)\n",
+        "        find(left, right + l[i], i + 1)\n",
+        "        find(left, right, i + 1)\n",
+        "        dp[i][diff] = True\n",
+        "\n",
+        "find(0,0,0)\n",
         "\n",
         "for i in s:\n",
-        "    \n"
+        "    if ans[i]:\n",
+        "        print('Y',end=' ')\n",
+        "    else:\n",
+        "        print('N',end=' ') \n"
       ],
       "execution_count": null,
       "outputs": []
@@ -7324,7 +7341,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
