Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "HNMURhhYKntw",
         "Zfx8md_duDzl"
       ],
-      "authorship_tag": "ABX9TyN1awTEQtBvAVA5zdbpHQEV",
+      "authorship_tag": "ABX9TyNFYTTzwgTEZTDMUAiVUxcJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6165,21 +6165,21 @@
         "# 스택과, 분할정복의 대표적인 문제 # https://st-lab.tistory.com/255\n",
         "\n",
         "### 분할 정복으로 구현\n",
-        "def f(start,end):\n",
+        "def f(start,end):               # 분할 정복 함수\n",
         "    \n",
-        "    if start == end:\n",
-        "        return l[start]\n",
+        "    if start == end:            # 시작점과 마지막 점이 같으면\n",
+        "        return l[start]         # \n",
         "    \n",
-        "    mid = (start + end) // 2\n",
+        "    mid = (start + end) // 2    # 중간값 지정\n",
         "    \n",
-        "    left = f(start, mid)\n",
-        "    right = f(mid+1, end)\n",
+        "    left = f(start, mid)        # 왼쪽 지역 분할 정복 실행\n",
+        "    right = f(mid+1, end)       # 오른쪽 지역 분할 정복 실행\n",
         "\n",
-        "    max_area = max(left, right)\n",
+        "    max_area = max(left, right) # 왼쪽 지역과 오른쪽 지역 중 최대 너비 선택\n",
         "\n",
-        "    to_left = mid\n",
-        "    to_right = mid\n",
-        "    h = l[mid]\n",
+        "    to_left = mid               #\n",
+        "    to_right = mid              #\n",
+        "    h = l[mid]                  #\n",
         "\n",
         "    max_area_0 = h\n",
         "\n",
@@ -6208,12 +6208,12 @@
         "\n",
         "    return max_area\n",
         "\n",
-        "while True:\n",
-        "    l = list(map(int, input().split()))\n",
-        "    if l == [0]:\n",
-        "        break\n",
+        "while True:                             # 무한반복\n",
+        "    l = list(map(int, input().split())) # 입력값\n",
+        "    if l == [0]:                        # 입력된 값의 처음이 0이면\n",
+        "        break                           # 무한 반복 종료\n",
         "    \n",
-        "    print(f(1,len(l)-1)) # 첫 번째 수는 직사각형의 수이다."
+        "    print(f(1,len(l)-1))                # 분할 정복"
       ],
       "execution_count": null,
       "outputs": []
@@ -7159,11 +7159,10 @@
         "    l.append(list(map(int, input().split()))) # 리스트 형태로 추가\n",
         "\n",
         "dp = [[False] * k for _ in range(k)] # 2차 행렬 생성\n",
-        "for j in range(1,k): # 각 열 오름차순 진행\n",
-        "    for i in range(j-1,-1,-1): # 각 행 내림차순 진행\n",
-        "        dp[i][j] = float('inf') # inf 값 입력\n",
-        "        for q in range(j-i): # i행의 q번째(왼쪽에서부터)\n",
-        "                             # j열의 q+1번째(위에서부터)\n",
+        "for j in range(1,k):                 # 각 열 오름차순 진행\n",
+        "    for i in range(j-1,-1,-1):       # 각 행 내림차순 진행\n",
+        "        dp[i][j] = float('inf')      # inf 값 입력\n",
+        "        for q in range(j-i):         # i행의 q번째(왼쪽에서부터), j열의 q+1번째(위에서부터)\n",
         "        \n",
         "            dp[i][j] = min(dp[i][j], # 이전 값\n",
         "                           dp[i][i+q] + dp[i+q+1][j] + l[i][0] * l[i+q][1] * l[j][1])\n",
@@ -7172,7 +7171,7 @@
         "                           # i행의 q번째 값의 뒷부분 * \n",
         "                           # j번째 행렬의 뒷부분\n",
         "        \n",
-        "print(dp[0][k-1]) # 결과 출력\n",
+        "print(dp[0][k-1])          # 결과 출력\n",
         "'''\n",
         "[False,    30,    90,    96]\n",
         "[False, False,    36,    54]\n",
@@ -7250,24 +7249,22 @@
       },
       "source": [
         "# 팰린드롬 - 역순으로 읽어도 똑같을 때\n",
-        "\n",
         "import sys\n",
-        "n = int(input())\n",
-        "l = list(map(int, input().split()))\n",
         "\n",
-        "dp = [[1]*n for _ in range(n)]\n",
-        "for j in range(1,n):\n",
-        "    for i in range(j-1,-1,-1):\n",
-        "        if l[i] == l[j] and dp[i+1][j-1]:\n",
-        "            continue\n",
-        "        dp[i][j] = 0\n",
+        "n = int(input())                            # 수열의 크기 입력\n",
+        "l = list(map(int, input().split()))         # 수열 입력\n",
         "\n",
-        "#for i in dp:\n",
-        "#    print(i)\n",
-        "m = int(input())\n",
-        "for _ in range(m):\n",
-        "    s, e = map(int, sys.stdin.readline().rstrip('\\n').split())\n",
-        "    print(dp[s-1][e-1])"
+        "dp = [[1]*n for _ in range(n)]              # n x n 크기의 2차원 배열 생성\n",
+        "for j in range(1,n):                        # 열 1번부터 진행\n",
+        "    for i in range(j-1,-1,-1):              # 행을 열의 크기 - 1 부터 내림차순 진행\n",
+        "        if l[i] == l[j] and dp[i+1][j-1]:   # 양 끝 l[i], l[j]가 같고, 그 사이의 값이 펠린드 롬이면\n",
+        "            continue                        # continue\n",
+        "        dp[i][j] = 0                        # 아니라면 펠린드롬이 아니기 때문에 0으로 업데이트\n",
+        "\n",
+        "m = int(input())        # 질문의 개수 입력\n",
+        "for _ in range(m):      # 질문의 개수 만큼 반복\n",
+        "    s, e = map(int, sys.stdin.readline().rstrip('\\n').split())  # 시작과 끝 지점 입력\n",
+        "    print(dp[s-1][e-1])                                         # dp에서 해당 지점 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -7289,34 +7286,35 @@
       "source": [
         "# https://blog.naver.com/cwyoo01/222608971611\n",
         "import sys\n",
-        "n = int(sys.stdin.readline().rstrip('\\n'))\n",
-        "l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
         "\n",
-        "m = int(sys.stdin.readline().rstrip('\\n'))\n",
-        "s = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "n = int(sys.stdin.readline().rstrip('\\n'))                      # 변수 입력\n",
+        "l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))   # \n",
         "\n",
-        "dp = [[False]*40001 for _ in range(n+1)]\n",
-        "ans = [False]*40001\n",
+        "m = int(sys.stdin.readline().rstrip('\\n'))                      #\n",
+        "s = list(map(int, sys.stdin.readline().rstrip('\\n').split()))   #\n",
         "\n",
-        "def find(left, right, i):\n",
-        "    global ans, dp\n",
+        "dp = [[False]*40001 for _ in range(n+1)]    # 추 추가 횟수, 무게의 2차 배열 생성\n",
+        "ans = [False]*40001                         # 확인 가능한 무게 목록 생성\n",
         "\n",
-        "    diff = abs(left - right)\n",
-        "    ans[diff] = True\n",
+        "def find(left, right, i):                   # 재귀 함수 생성\n",
+        "    global ans, dp                          # 전역 변수 지정\n",
         "\n",
-        "    if i == n:\n",
-        "        return\n",
+        "    diff = abs(left - right)                # 왼쪽과 오른쪽 저울의 차이\n",
+        "    ans[diff] = True                        # 차이 만큼 구슬의 무게를 확인 가능\n",
         "\n",
-        "    if not dp[i][diff]:\n",
-        "        find(left + l[i], right, i + 1)\n",
-        "        find(left, right + l[i], i + 1)\n",
-        "        find(left, right, i + 1)\n",
-        "        dp[i][diff] = True\n",
+        "    if i == n:                              # 추가한 추의 횟수가 최대값이면\n",
+        "        return                              # 재귀 종료\n",
         "\n",
-        "find(0,0,0)\n",
+        "    if not dp[i][diff]:                     # 방문 여부\n",
+        "        find(left + l[i], right, i + 1)     # 왼쪽 저울에 추를 올린 경우\n",
+        "        find(left, right + l[i], i + 1)     # 오른쪽 저울에 추를 올린 경우\n",
+        "        find(left, right, i + 1)            # 추를 올리지 않은 경우\n",
+        "        dp[i][diff] = True                  # 방문 표시\n",
+        "    \n",
+        "find(0,0,0)                                 # 재귀 실행\n",
         "\n",
-        "for i in s:\n",
-        "    if ans[i]:\n",
+        "for i in s:                                 # 무게 확인\n",
+        "    if ans[i]:                              # 해당 무게가 확인 가능하면\n",
         "        print('Y',end=' ')\n",
         "    else:\n",
         "        print('N',end=' ') \n"
@@ -7330,7 +7328,7 @@
         "id": "t2tEp1nNBfZp"
       },
       "source": [
-        "#### "
+        "####  (*)2293번"
       ]
     },
     {
@@ -7339,9 +7337,21 @@
         "id": "rGOUdWM1BfZp"
       },
       "source": [
-        ""
+        "### https://mong9data.tistory.com/68\n",
+        "n, k = map(int, input().split())\n",
+        "l = [int(input()) for _ in range(n)]\n",
+        "\n",
+        "dp = [False] * (k+1)\n",
+        "dp[0] = 1\n",
+        "\n",
+        "for i in range(n):\n",
+        "    for j in range(l[i], k+1):\n",
+        "        if j-l[i] > -1:\n",
+        "            dp[j] += dp[j-l[i]]\n",
+        "    print(dp)\n",
+        "print(dp[-1])\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7463,28 +7473,28 @@
         "id": "NcsffSumDWAy"
       },
       "source": [
-        "n = int(input())\n",
-        "c = int(input())\n",
+        "n = int(input())                        #\n",
+        "c = int(input())                        #\n",
         "\n",
-        "visited = [False] * (n+1)\n",
-        "node = [[] for _ in range(n+1)]\n",
+        "visited = [False] * (n+1)               # 방문 여부 리스트 생성\n",
+        "node = [[] for _ in range(n+1)]         # Adjacenct Lists in Lists 생성\n",
         "\n",
-        "for _ in range(c):\n",
-        "    a, b = map(int, input().split())\n",
-        "    node[a].append(b)\n",
-        "    node[b].append(a)\n",
+        "for _ in range(c):                      # 입력 횟수 만큼 반복\n",
+        "    a, b = map(int, input().split())    # vertex 입력\n",
+        "    node[a].append(b)                   # 해당 vertex에 연결된 vertex 삽입\n",
+        "    node[b].append(a)                   # 위와 동일\n",
         "\n",
-        "def dfs(x):\n",
-        "    if visited[x]:\n",
-        "        return\n",
+        "def dfs(x):                             # DFS\n",
+        "    if visited[x]:                      # 방문여부 확인\n",
+        "        return                          # 방문시 재귀 종료\n",
         "\n",
-        "    visited[x] = True\n",
-        "    for i in node[x]:\n",
-        "        dfs(i)\n",
+        "    visited[x] = True                   # 방문 여부 업데이트\n",
+        "    for i in node[x]:                   # 해당 vertex와 연결된 vertex들\n",
+        "        dfs(i)                          # 연결된 vertex에 방문\n",
         "\n",
-        "dfs(1)\n",
-        "visited[1] = False\n",
-        "print(sum(visited))"
+        "dfs(1)                  # 1번 컴퓨터로부터 dfs 실행\n",
+        "visited[1] = False      # 1번 컴퓨터는 count에서 제외\n",
+        "print(sum(visited))     # 방문한 vertex들 count"
       ],
       "execution_count": null,
       "outputs": []
