Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -125,6 +125,7 @@
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
         "z02YtuKLBZ4I",
+        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -134,9 +135,33 @@
         "9IktNkNQGUUH",
         "VOaWDLwIWXJf",
         "HNMURhhYKntw",
-        "Zfx8md_duDzl"
+        "Zfx8md_duDzl",
+        "BBOyONnAphxq",
+        "cwLrxQzg0oRG",
+        "NOcjjp8g0oUZ",
+        "YoZ4CWbgRtfa",
+        "uPXzp27pRtie",
+        "NmN8u0qcRtlf",
+        "rJALFDucRtoU",
+        "PF-e7T96nF2u",
+        "cAltWVGrnF7J",
+        "rx4yoDQdzb1M",
+        "GeLDsmu6zb5D",
+        "QtKXQ-B6zb8r",
+        "vzceFGcDmtrw",
+        "0NWgir__mwGD",
+        "7RWTIiPXmwI2",
+        "RsNw0SxrmwLi",
+        "R8LKjl8NmwON",
+        "P3xQwj6O0mzQ",
+        "h2Bv5m130m2M",
+        "FfeyDe_X0m5D",
+        "Zj_G1Z_AOL0y",
+        "bD1i4z1uOL4t",
+        "CIsbivR4a9HU",
+        "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNFYTTzwgTEZTDMUAiVUxcJ",
+      "authorship_tag": "ABX9TyN9lo+KfjBwuuplRr8Yz/Sl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7338,18 +7363,17 @@
       },
       "source": [
         "### https://mong9data.tistory.com/68\n",
-        "n, k = map(int, input().split())\n",
-        "l = [int(input()) for _ in range(n)]\n",
+        "n, k = map(int, input().split())        # n개의 동전과 가치의 합 k 입력\n",
+        "l = [int(input()) for _ in range(n)]    # n개의 동전 입력\n",
         "\n",
-        "dp = [False] * (k+1)\n",
-        "dp[0] = 1\n",
+        "dp = [False] * (k+1)                    # k+1 개의 리스트 생성\n",
+        "dp[0] = 1                               # \n",
         "\n",
         "for i in range(n):\n",
         "    for j in range(l[i], k+1):\n",
         "        if j-l[i] > -1:\n",
         "            dp[j] += dp[j-l[i]]\n",
-        "    print(dp)\n",
-        "print(dp[-1])\n"
+        "print(dp[-1])"
       ],
       "execution_count": null,
       "outputs": []
@@ -7360,7 +7384,7 @@
         "id": "fDV6tkrLBfeE"
       },
       "source": [
-        "#### "
+        "####  7579번"
       ]
     },
     {
@@ -7369,7 +7393,31 @@
         "id": "bYJjc5QVBfeF"
       },
       "source": [
-        ""
+        "# curr[j] = max(prev[j], curr[j])에서\n",
+        "# 현재값도 같이 비교해야 하는 부분을 찾느라 2시간이 더 걸림. => 오류 찾는 연습을 더 할 것.\n",
+        "\n",
+        "n, m = map(int, input().split())    # n개의 앱, m의 바이트 확보\n",
+        "l = list(map(int, input().split())) # 메모리 바이트 수\n",
+        "c = list(map(int, input().split())) # 다시 실행 할 때의 비용\n",
+        "\n",
+        "t = sum(c)                          # 비용의 최대 합\n",
+        "\n",
+        "prev = [-1 for _ in range(t+1)]     # 이전 dp\n",
+        "curr = [-1 for _ in range(t+1)]     # 현재 dp\n",
+        "prev[0] = 0                         # 시작은 0으로 시작\n",
+        "\n",
+        "for i in range(n):                                              # n개의 앱 수 만큼 반복\n",
+        "    for j in range(t+1):                                        # 0부터 비용의 최대 합 까지 반복\n",
+        "        if prev[j] >= 0:                                        # 이전 j 비용에 값이 들어있으면\n",
+        "            curr[j] = max(prev[j], curr[j])                     # j번째 비용 업데이트(i번째 앱을 제거하지 않는다는 가정)\n",
+        "            curr[j+c[i]] = max(prev[j+c[i]], prev[j] + l[i])    # j번째 + i번째 앱의 비용 업데이트(i번째 앱을 제거 한다는 가정)\n",
+        "\n",
+        "    prev, curr = curr, prev                                     # 이전과 현재의 dp 변경\n",
+        "\n",
+        "for i in range(t+1):                # 0부터 비용의 초대 합 까지 반복\n",
+        "    if prev[i] >= m:                # 변경된 마지막 dp의 i번째 원소가 m 보다 크거나 같으면\n",
+        "        print(i)                    # i를 출력하고 종료\n",
+        "        break\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -7473,8 +7521,8 @@
         "id": "NcsffSumDWAy"
       },
       "source": [
-        "n = int(input())                        #\n",
-        "c = int(input())                        #\n",
+        "n = int(input())                        # 컴퓨터 수 입력\n",
+        "c = int(input())                        # 연결된 컴퓨터 쌍의 수 입력\n",
         "\n",
         "visited = [False] * (n+1)               # 방문 여부 리스트 생성\n",
         "node = [[] for _ in range(n+1)]         # Adjacenct Lists in Lists 생성\n",
@@ -8851,21 +8899,21 @@
         "m = [['A','C','A','G'],\n",
         "     ['C','G','T','A'],\n",
         "     ['A','T','C','G'],\n",
-        "     ['G','A','G','T']]\n",
+        "     ['G','A','G','T']]             # 염기 배열 입력\n",
         "\n",
-        "m_list = {'A':0,'G':1,'C':2,'T':3}\n",
+        "m_list = {'A':0,'G':1,'C':2,'T':3}  # 염기 서열  dict형태로 입력\n",
         "\n",
-        "n = int(input())\n",
+        "n = int(input())                    # 염기 서열의 길이 입력\n",
         "\n",
-        "t = input()\n",
-        "res = t[-1]\n",
+        "t = input()                         # 염기 서열 입력\n",
+        "res = t[-1]                         # 결과 변수 생성(뒤에서 부터 해독 되므로)\n",
         "\n",
-        "for k in range(-2,-n-1,-1):\n",
-        "    i = m_list[t[k]]\n",
-        "    j = m_list[res]\n",
-        "    res = m[i][j]\n",
+        "for k in range(-2,-n-1,-1):         # 맨 뒤에서 두번째 부터 뒤에서 부터 n번째 까지 반복\n",
+        "    i = m_list[t[k]]                # 입력된 k 번째 염기\n",
+        "    j = m_list[res]                 # 뒷 부분에서 해독된 염기\n",
+        "    res = m[i][j]                   # 해독된 염기 서열 업데이트\n",
         "\n",
-        "print(res)"
+        "print(res)                          # 해독된 염기 서열 출력"
       ],
       "metadata": {
         "id": "yheIzxIta9K7"
@@ -8879,7 +8927,7 @@
         "id": "MkeGXGAL5ohl"
       },
       "source": [
-        "#### "
+        "   #### "
       ]
     },
     {
