--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -124,6 +124,7 @@
         "C8-hqFACoskw",
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
+        "vUcr9l-QBV2m",
         "z02YtuKLBZ4I",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -161,7 +162,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyN9lo+KfjBwuuplRr8Yz/Sl",
+      "authorship_tag": "ABX9TyNdJPZ9eK3Yq36vvU8fzTOI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7115,6 +7116,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        " - dynamic programming의 핵심은 2차원 배열로 만들시 행, 열, 원소를 무엇으로 둘 것인지 잘 고려해 볼것!"
+      ],
+      "metadata": {
+        "id": "UsGHKdG9gExb"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "HXmexh_cBV2o"
       },
@@ -7223,37 +7233,37 @@
       },
       "source": [
         "import sys\n",
-        "# top-down 방식\n",
-        "sys.setrecursionlimit(1000000000) # 없으면 재귀 깊이 오류\n",
-        "n, m = map(int, input().split())                        # 행과 열의 개수 입력\n",
+        "\n",
+        "sys.setrecursionlimit(1000000000)   # 없으면 재귀 깊이 오류\n",
+        "n, m = map(int, input().split())    # 행과 열의 개수 입력\n",
         "\n",
         "l = []                                          # 지도 리스트 생성\n",
         "for _ in range(n):                              # 행만큼 반복\n",
-        "    l.append(list(map(int, input().split())))   # 지도 입력\n",
+        "    l.append(list(map(int, input().split())))   # 지도 배열 입력\n",
         "\n",
-        "res = [[-1] * m for _ in range(n)]\n",
-        "res[-1][-1] = 1\n",
+        "res = [[-1] * m for _ in range(n)]              # n x m 배열 생성\n",
+        "res[-1][-1] = 1                                 # top-down 형식을 위한 목표 지점 설정\n",
         "\n",
-        "def can(i,j):\n",
-        "    if i < 0 or j < 0 or i >= n or j >= m:\n",
-        "        return False\n",
-        "    else:\n",
-        "        return True\n",
+        "def can(i,j):                                   # 갈 수 있는 지 여부\n",
+        "    if i < 0 or j < 0 or i >= n or j >= m:      # i와 j가 배열을 벗어나면\n",
+        "        return False                            # False return\n",
+        "    else:                                       # 배열 안에 있으면\n",
+        "        return True                             # True return\n",
         "\n",
-        "def find(i,j):\n",
-        "    if res[i][j] != -1:\n",
-        "        return res[i][j]\n",
+        "def find(i,j):                                  # DFS형식의 재귀 함수 정의\n",
+        "    if res[i][j] != -1:                         # i, j 배열 원소가 -1이 아니면\n",
+        "        return res[i][j]                        # 해당 값 return\n",
         "\n",
-        "    res[i][j] = 0\n",
+        "    res[i][j] = 0                               # -1이면 배열 원소 0으로 \n",
         "\n",
-        "    for x, y in[(0,1),(1,0),(0,-1),(-1,0)]:\n",
-        "        if can(i+x,j+y): \n",
-        "            if l[i][j] > l[i+x][j+y]:                \n",
-        "                res[i][j] += find(i+x, j+y)\n",
+        "    for x, y in[(0,1),(1,0),(0,-1),(-1,0)]:     # 하, 우, 상, 좌의 순으로 반복 \n",
+        "        if can(i+x,j+y):                        # 해당 방향으로 갈 수 있는 지 여부 판단\n",
+        "            if l[i][j] > l[i+x][j+y]:           # 지도에서 해당 방향으로 값이 내려가는 지 판단\n",
+        "                res[i][j] += find(i+x, j+y)     # i, j 배열 원소에 해당 방향에 해당 하는 값 추가\n",
         "\n",
-        "    return res[i][j]\n",
+        "    return res[i][j]                            # 시작 지점 배열 원소 return\n",
         "\n",
-        "print(find(0,0))"
+        "print(find(0,0))                                # 0,0에서 시작하는 find함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -7366,14 +7376,17 @@
         "n, k = map(int, input().split())        # n개의 동전과 가치의 합 k 입력\n",
         "l = [int(input()) for _ in range(n)]    # n개의 동전 입력\n",
         "\n",
-        "dp = [False] * (k+1)                    # k+1 개의 리스트 생성\n",
-        "dp[0] = 1                               # \n",
+        "dp = [False] * (k+1)                    # k+1의 가치 합 리스트 생성\n",
+        "dp[0] = 1                               # 동전 하나만 사용하는 경우를 위해 1 할당\n",
         "\n",
-        "for i in range(n):\n",
-        "    for j in range(l[i], k+1):\n",
-        "        if j-l[i] > -1:\n",
-        "            dp[j] += dp[j-l[i]]\n",
-        "print(dp[-1])"
+        "for i in range(n):                      # i번째까지 동전들을 사용\n",
+        "    for j in range(l[i], k+1):          # i번째 동전의 가치부터 배열의 끝까지 진행 \n",
+        "        if j-l[i] > -1:                 # i번째 동전의 가치이상 부터 진행\n",
+        "            dp[j] += dp[j-l[i]]         # i-1번째까지의 동전들을 사용한 경우의 수와 \n",
+        "                                        # (j가치 - i번째 동전의 가치)의 경우의 수를 더함\n",
+        "                                        # bc. (j - i번째 동전의 가치) + i번째 동전의 가치 = j\n",
+        "\n",
+        "print(dp[-1])                           # 경우의 수 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -7553,7 +7566,7 @@
         "id": "_jfJBLzSDWEK"
       },
       "source": [
-        "#### "
+        "####  2667번"
       ]
     },
     {
@@ -7562,7 +7575,55 @@
         "id": "2423R-7gDWEK"
       },
       "source": [
-        ""
+        "n = int(input())                                            # 지도의 크기 입력\n",
+        "    \n",
+        "m = []                                                      # 지도 배열 생성\n",
+        "for _ in range(n):                                          # n번 반복\n",
+        "    m.append(list(map(int, '\\n'.join(input()).split() )) )  # 지도 배열 입력\n",
+        "                                                            # (문자로 그대로 받으면 '0' 이 True로 나와 오류 찾는데 애먹음)\n",
+        "\n",
+        "visited = [[False]*n for _ in range(n)]                     # 방문 여부 배열 생성\n",
+        "\n",
+        "t = []                                                      # 결과 리스트 생성\n",
+        "\n",
+        "def dfs(i,j):                                               # dfs 함수 생성\n",
+        "    global visited, cnt                                     # 전역변수 지정\n",
+        "    \n",
+        "    visited[i][j] = True                                    # i, j 요소 방문 표시\n",
+        "    cnt += 1                                                # 단지내 집 수 + 1\n",
+        "\n",
+        "    for x, y in ([-1,0], [1,0], [0,1], [0,-1]):             # 상, 하, 좌, 우 방문\n",
+        "        if 0 <= i+x and i+x < n and 0 <= j+y and j+y < n:   # 배열의 크기를 안 벗어나고\n",
+        "            if m[i+x][j+y] and not visited[i+x][j+y]:       # 해당 방향 방문한 요소가 1이고, 방문하지 않았다면\n",
+        "                dfs(i+x, j+y)                               # dfs 진행\n",
+        "\n",
+        "for i in range(n):                          # n번 반복\n",
+        "    for j in range(n):                      # n번 반복\n",
+        "        if not m[i][j] or visited[i][j]:    # i, j배열의 지도 원소가 0이거나 방문했으면\n",
+        "            continue                        # 넘어감\n",
+        "        \n",
+        "        cnt = 0                             # 단지내 집 수\n",
+        "        dfs(i,j)                            # dfs 진행\n",
+        "\n",
+        "        if cnt:                             # 단지내 집 수가 1 이상이면\n",
+        "            t.append(cnt)                   # 결과 리스트에 추가\n",
+        "\n",
+        "print(len(t))                               # 단지의 수 출력\n",
+        "t.sort(reverse=False)                       # 오름차순 진행 \n",
+        "for i in t:                                 # 단지내 집 수 각각 출력\n",
+        "    print(i)\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "7\n",
+        "0110100\n",
+        "0110101\n",
+        "1110101\n",
+        "0000111\n",
+        "0100000\n",
+        "0111110\n",
+        "0111000\n",
+        "'''"
       ],
       "execution_count": null,
       "outputs": []
