--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -162,7 +162,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNdJPZ9eK3Yq36vvU8fzTOI",
+      "authorship_tag": "ABX9TyPfejdknV8w+bTfYPKpQHft",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7441,7 +7441,8 @@
         "id": "PkFTWJFFBZxw"
       },
       "source": [
-        "### 24단계 : DFS와 BFS===========**"
+        "### 24단계 : DFS와 BFS===========**\n",
+        "    sys.setrecursionlimit(1000000000)"
       ]
     },
     {
@@ -7611,19 +7612,7 @@
         "print(len(t))                               # 단지의 수 출력\n",
         "t.sort(reverse=False)                       # 오름차순 진행 \n",
         "for i in t:                                 # 단지내 집 수 각각 출력\n",
-        "    print(i)\n",
-        "\n",
-        "\n",
-        "'''\n",
-        "7\n",
-        "0110100\n",
-        "0110101\n",
-        "1110101\n",
-        "0000111\n",
-        "0100000\n",
-        "0111110\n",
-        "0111000\n",
-        "'''"
+        "    print(i)"
       ],
       "execution_count": null,
       "outputs": []
@@ -7634,7 +7623,7 @@
         "id": "oPD8cNOfDWHz"
       },
       "source": [
-        "#### "
+        "####  1012번"
       ]
     },
     {
@@ -7643,7 +7632,44 @@
         "id": "EDNpnlLkDWH3"
       },
       "source": [
-        ""
+        "import sys\n",
+        "sys.setrecursionlimit(1000000000)   # 없으면 재귀 깊이 오류\n",
+        "t = int(input())\n",
+        "for _ in range(t):\n",
+        "    m, n, k = map(int, input().split())\n",
+        "\n",
+        "    M = [[False]*m for _ in range(n)]\n",
+        "    visited = [[False]*m for _ in range(n)]\n",
+        "\n",
+        "    for _ in range(k):\n",
+        "        x, y = map(int, input().split())\n",
+        "        M[y][x] = True\n",
+        "\n",
+        "    t = 0\n",
+        "\n",
+        "    def dfs(i,j):                                               # dfs 함수 생성\n",
+        "        global visited, cnt                                     # 전역변수 지정\n",
+        "    \n",
+        "        visited[i][j] = True                                    # i, j 요소 방문 표시\n",
+        "        cnt = True                                               # 단지내 집 수 + 1\n",
+        "\n",
+        "        for a, b in ([-1,0], [1,0], [0,1], [0,-1]):             # 상, 하, 좌, 우 방문\n",
+        "            if 0 <= i+a and i+a < n and 0 <= j+b and j+b < m:   # 배열의 크기를 안 벗어나고\n",
+        "                if M[i+a][j+b] and not visited[i+a][j+b]:       # 해당 방향 방문한 요소가 1이고, 방문하지 않았다면\n",
+        "                    dfs(i+a, j+b)                               # dfs 진행\n",
+        "\n",
+        "    for i in range(n):                          # n번 반복\n",
+        "        for j in range(m):                      # n번 반복\n",
+        "            if not M[i][j] or visited[i][j]:    # i, j배열의 지도 원소가 0이거나 방문했으면\n",
+        "                continue                        # 넘어감\n",
+        "            \n",
+        "            cnt = False                             # 단지내 집 수\n",
+        "            dfs(i,j)                            # dfs 진행\n",
+        "\n",
+        "            if cnt:                             # 단지내 집 수가 1 이상이면\n",
+        "                t += 1                          # 결과 리스트에 추가\n",
+        "    \n",
+        "    print(t)"
       ],
       "execution_count": null,
       "outputs": []
