Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -125,6 +125,12 @@
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
         "vUcr9l-QBV2m",
+        "HXmexh_cBV2o",
+        "rh9vFZIYBfGW",
+        "mojqkuQlBfMe",
+        "Xc2rVYZ1DWAq",
+        "_jfJBLzSDWEK",
+        "oPD8cNOfDWHz",
         "z02YtuKLBZ4I",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -162,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPfejdknV8w+bTfYPKpQHft",
+      "authorship_tag": "ABX9TyN4z1sEf1fbUSY767wY4DEE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7633,19 +7639,20 @@
       },
       "source": [
         "import sys\n",
-        "sys.setrecursionlimit(1000000000)   # 없으면 재귀 깊이 오류\n",
-        "t = int(input())\n",
-        "for _ in range(t):\n",
-        "    m, n, k = map(int, input().split())\n",
+        "sys.setrecursionlimit(1000000000)               # 없으면 RecursionError\n",
+        "t = int(input())                                # 테스트 수 입력\n",
         "\n",
-        "    M = [[False]*m for _ in range(n)]\n",
-        "    visited = [[False]*m for _ in range(n)]\n",
+        "for _ in range(t):                              # 테스트 수 만큼 반복\n",
+        "    m, n, k = map(int, input().split())         # 땅의 가로, 세로 크기 및 배추의 수 입력\n",
         "\n",
-        "    for _ in range(k):\n",
-        "        x, y = map(int, input().split())\n",
-        "        M[y][x] = True\n",
+        "    M = [[False]*m for _ in range(n)]           # 땅 배열 생성\n",
+        "    visited = [[False]*m for _ in range(n)]     # 방문 여부 배열 생성\n",
         "\n",
-        "    t = 0\n",
+        "    for _ in range(k):                          # 배추의 수 만큼 반복\n",
+        "        x, y = map(int, input().split())        # 가로축 세로축 입력\n",
+        "        M[y][x] = True                          # 배추의 위치 입력\n",
+        "\n",
+        "    t = 0                                       # 배추벌레의 수 변수 생성\n",
         "\n",
         "    def dfs(i,j):                                               # dfs 함수 생성\n",
         "        global visited, cnt                                     # 전역변수 지정\n",
@@ -7659,15 +7666,15 @@
         "                    dfs(i+a, j+b)                               # dfs 진행\n",
         "\n",
         "    for i in range(n):                          # n번 반복\n",
-        "        for j in range(m):                      # n번 반복\n",
-        "            if not M[i][j] or visited[i][j]:    # i, j배열의 지도 원소가 0이거나 방문했으면\n",
+        "        for j in range(m):                      # m번 반복\n",
+        "            if not M[i][j] or visited[i][j]:    # i, j 배열의 땅 원소가 False 이거나 방문했으면\n",
         "                continue                        # 넘어감\n",
         "            \n",
-        "            cnt = False                             # 단지내 집 수\n",
+        "            cnt = False                         # 배추들 모여있는 지 여부\n",
         "            dfs(i,j)                            # dfs 진행\n",
         "\n",
-        "            if cnt:                             # 단지내 집 수가 1 이상이면\n",
-        "                t += 1                          # 결과 리스트에 추가\n",
+        "            if cnt:                             # 배추들이 모여있는 그룹이면\n",
+        "                t += 1                          # 배추벌레의 수 + 1\n",
         "    \n",
         "    print(t)"
       ],
@@ -7680,7 +7687,7 @@
         "id": "gtmge-G6DWK4"
       },
       "source": [
-        "#### "
+        "####  2178번"
       ]
     },
     {
@@ -7689,7 +7696,39 @@
         "id": "7FSKT5VZDWK4"
       },
       "source": [
-        ""
+        "import sys                                      # 필요 모듈 import\n",
+        "n, m = map(int, input().split())                # 배열의 크기 입력\n",
+        "\n",
+        "s = []                                          # 배열 변수 지정\n",
+        "for _ in range(n):                              # 배열의 행만큼 반복\n",
+        "    s.append(sys.stdin.readline().rstrip('\\n')) # 배열 입력\n",
+        "\n",
+        "visited = [[False] * m for _ in range(n)]       # 방문 여부 배열 생성\n",
+        "\n",
+        "def bfs(v, t):                                  # 너비우선탐색 진행(queue 형태) \n",
+        "    queue = []                                  # queue를 리스트로 생성\n",
+        "    queue.append(v)                             # queue에 시작 지점 append\n",
+        "    visited[v[0]][v[1]] = True                  # 시작 지점 방문 표시\n",
+        "\n",
+        "    while True:                                 # 무한 반복\n",
+        "        if queue == [] or [n-1, m-1] in queue:  # 더이상 갈 곳이 없거나 종료지점에 도달했으면\n",
+        "            break                               # 무한 반복 종료\n",
+        "\n",
+        "        t += 1                                  # 거리 변수 + 1\n",
+        "        for _ in range(len(queue)):             # 해당 거리에 있는 위치의 개수만큼 반복\n",
+        "            popped = queue.pop(0)               # queue에서 맨 앞에 요소 제거\n",
+        "            i, j = popped[0], popped[1]         # 방출된 요소 unpacking\n",
+        "\n",
+        "            for a, b in ([-1, 0], [1, 0], [0, 1], [0, -1]):             # 상, 하, 좌, 우 방향으로 진행\n",
+        "                if 0 <= i+a and i+a < n and 0 <= j+b and j+b < m:       # 해당 방향 요소가 배열 안에있고\n",
+        "                    if s[i+a][j+b] == '1' and not visited[i+a][j+b]:    # 길인 '1' 이고 방문하지 않았다면\n",
+        "                        queue.append([i+a, j+b])                        # 해당 방향 위치를 queue에 append\n",
+        "                        visited[i+a][j+b] = True                        # 해당 방향 방문 표시\n",
+        "\n",
+        "    return t                                                            # 거리 return(즉, 깊이 반환)\n",
+        "\n",
+        "\n",
+        "print(bfs([0, 0], 1))                                                   # bfs 진행"
       ],
       "execution_count": null,
       "outputs": []
